--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "leaflet": "^1.9.4",
     "vue": "2.7.16",
     "vue-router": "3.6.5",
+    "vue2-leaflet": "^2.7.1",
     "vuetify": "2.7.2",
     "vuex": "3.6.2"
   },
@@ -40,7 +42,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
