--- a/package.json
+++ b/package.json
@@ -5,29 +5,42 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "jest"
   },
   "dependencies": {
+    "@vue/vue2-jest": "26.0.1",
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "vue": "2.7.16",
+    "vue-i18n": "^8.28.2",
+    "vue-i18n-composable": "^2.0.0",
+    "vue-js-modal": "2.0.1",
     "vue-router": "3.6.5",
+    "vue-server-renderer": "^2.7.16",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "2.7.2",
     "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.26.0",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-env": "^7.26.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "4.5.19",
+    "@vue/cli-service": "5.0.8",
+    "@vue/test-utils": "^1.3.6",
+    "babel-jest": "26.6.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jest": "^26.6.3",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-jest": "^4.0.1",
     "vue-template-compiler": "^2.6.14",
+    "vue-toastification": "^1.7.14",
     "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
