--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vue/vue2-jest": "26.0.1",
@@ -28,12 +29,12 @@
     "@babel/preset-env": "^7.26.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "4.5.19",
     "@vue/cli-service": "5.0.8",
     "@vue/test-utils": "^1.3.6",
     "babel-jest": "26.6.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^6.2.0",
     "jest": "^26.6.3",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
